--- a/src/http/views/errors/404.hbs
+++ b/src/http/views/errors/404.hbs
@@ -2,8 +2,8 @@
     <div class="font-display text-8xl font-bold text-hotpink-500 dark:text-hotpink-400 mb-4">404</div>
     <div class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4">Page Not Found</div>
     <div class="text-lg text-gray-500 dark:text-gray-400 mb-8">
-        {{#if message}}
-            {{message}}
+        {{#if toast}}
+            {{toast.message}}
         {{else}}
             Oops! This is not the page you are looking for.
         {{/if}}
