--- a/src/http/views/partials/navbar.hbs
+++ b/src/http/views/partials/navbar.hbs
@@ -66,20 +66,20 @@
         {{/if}}
     </div>
 </nav>
-<div id="response-message" class="response-message bg-{{#if status }}{{ status }}{{else}}info{{/if}} hidden" role="alert">
+<div id="response-message" class="response-message bg-{{#if toast }}{{ toast.status }}{{else}}info{{/if}} hidden" role="alert">
     <div class="toast-body">
         <div class="toast-icon">
-            {{#if (eq status 'success')}}
+            {{#if (eq toast.status 'success')}}
             <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg>
-            {{else if (eq status 'error')}}
-            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-            {{else if (eq status 'warning')}}
+            {{else if (eq toast.status 'error')}}
+            <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+            {{else if (eq toast.status 'warning')}}
             <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" /></svg>
             {{else}}
             <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
             {{/if}}
         </div>
-        <span class="toast-text">{{message}}</span>
+        <span class="toast-text">{{toast.message}}</span>
         <button class="toast-close" id="toast-close-btn" aria-label="Close notification">
             <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" /></svg>
         </button>
