--- a/src/http/views/errors/401.hbs
+++ b/src/http/views/errors/401.hbs
@@ -2,8 +2,8 @@
     <div class="font-display text-8xl font-bold text-teal-500 dark:text-teal-400 mb-4">401</div>
     <div class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4">Access Denied</div>
     <div class="text-lg text-gray-500 dark:text-gray-400 mb-8">
-        {{#if message}}
-            {{message}}
+        {{#if toast}}
+            {{toast.message}}
         {{else}}
             You need to be logged in to access this page.
         {{/if}}
