--- a/src/http/views/errors/500.hbs
+++ b/src/http/views/errors/500.hbs
@@ -2,8 +2,8 @@
     <div class="font-display text-8xl font-bold text-hotpink-500 dark:text-hotpink-400 mb-4">500</div>
     <div class="text-2xl font-semibold text-gray-800 dark:text-gray-200 mb-4">Internal Server Error</div>
     <div class="text-lg text-gray-500 dark:text-gray-400 mb-8">
-        {{#if message}}
-            {{message}}
+        {{#if toast}}
+            {{toast.message}}
         {{else}}
             Something went wrong on our end. Please try again later.
         {{/if}}
